# chicane

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  listener.py  magaldi.yaml  pyproject.toml  setup.sh  slack-app-manifest.json
.github/workflows/: publish.yml
artifacts/: chicane-ghost.md
chicane/: __init__.py  __main__.py  app.py  claude.py  config.py  emoji_map.py  handlers.py  mcp_server.py  sessions.py  setup.py  skill.md  slack-app-manifest.json  slack_queue.py
chicane/artifacts/: skill.md  slack-app-manifest.json
docs/: slack-setup.md
goose/: __init__.py  __main__.py  app.py  claude.py  config.py  handlers.py  init.py  sessions.py  setup.py  skill.md  slack-app-manifest.json
plans/: claude-code-slack-bot-setup.md  implementation-plan.md
slaude/: __init__.py  __main__.py  app.py  claude.py  config.py  handlers.py  sessions.py
tests/: conftest.py  test_app.py  test_claude.py  test_config.py  test_emoji_map.py  test_handlers.py  test_handlers_ask_user.py  test_handlers_batching.py  test_handlers_concurrency.py  test_handlers_files.py  test_handlers_formatting.py  test_handlers_idle_flush.py  test_handlers_images.py  test_handlers_interrupt.py  test_handlers_notifications.py  test_handlers_process_message.py  test_handlers_routing.py  test_handlers_security.py  test_handlers_session_handling.py  test_handlers_thread_root_emoji.py  test_handlers_todo.py  test_handlers_tool_activity.py  test_handlers_utils.py  test_init.py  test_mcp_server.py  test_sessions.py  test_setup.py  test_slack_queue.py
