[project]
name = "chicane"
version = "0.1.0"
description = "Chicane — When Claude Code can't go straight, take the chicane. A Slack bridge for Claude Code."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "dinnyosz", email = "dinnyosz@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "slack-bolt[async]>=1.18.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
    "certifi",
    "platformdirs>=4.0",
    "rich>=13.0",
    "mcp>=1.2.0",
    "claude-agent-sdk>=0.1.35",
    "coolname>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.urls]
Homepage = "https://github.com/dinnyosz/chicane"
Repository = "https://github.com/dinnyosz/chicane"

[project.scripts]
chicane = "chicane.app:main"
chicane-mcp = "chicane.mcp_server:main"
chicane-mcp-dev = "chicane.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["chicane"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
